# dashboard

./: .gitignore  CMakeLists.txt  README.md  esp_idf_project_configuration.json  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  config.h  display.c  display.h  ha_client.c  ha_client.h  idf_component.yml  net_scanner.c  net_scanner.h
main/ui/: ui_dashboard.c  ui_dashboard.h
