idf_component_register(
    SRCS
        "app_main.c"
        "display.c"
        "ha_client.c"
        "net_scanner.c"
        "ui/ui_dashboard.c"
    INCLUDE_DIRS
        "."
        "ui"
    REQUIRES
        nvs_flash
        esp_eth
        esp_event
        esp_netif
        esp_timer
        driver
        esp_lcd
        esp_hw_support
        esp_mm
        lwip
        espressif__cjson
)
